<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:gravity="center"
    android:background="@drawable/fondo"
    >

    <TextView
        android:id="@+id/textViewHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:text="@string/introduce_los_datos_para_registrarte_o_para_acceder_si_ya_estas_registrado"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="normal|bold|italic" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/textViewHead"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:maxLength="40"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextEmailAddress"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/password_min_6_caracteres"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textColor="@color/black"
        />

    <RelativeLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextPassword"
        android:gravity="center"
        android:layout_marginTop="15dp"
        >

        <Button
            android:id="@+id/buttonRegist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/registrar"
            android:backgroundTint="#687259"
            />

        <Button
            android:id="@+id/buttonAccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/buttonRegist"
            android:text="@string/acceder"
            android:backgroundTint="#8E412E"
            />

    </RelativeLayout>


</RelativeLayout>